1087: no tycho.testArgLine --add-modules=ALL-SYSTEM in test POM
It's already handled in the generated parent POM

Task-Url: https://github.com/eclipse/xtext-core/issues/1087
Signed-off-by: Lorenzo Bettini <lorenzo.bettini@gmail.com>